--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+    body {
+    background-color: #F9F6F2;
+    margin: 0;
+    }
+
+    .name {
+    color: rgba(145, 91, 74, 1);
+    font-size: 30px;
+    text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    font-family: 'Inter', sans-serif;
+    }
+
+    .talks {
+        color: #38470B;
+        }
+    
+        .header-nav {
+            display: flex;
+            justify-content: flex-end;
+            padding: 15px;
+          }
+          
+          .link {
+  margin-top: 15px;
+    text-decoration: none;
+    color: #38470B;
+    font-size: 24px;
+    text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    font-family: 'Inter', sans-serif;
+          }
+
+          .logo {
+            display: flex;
+            margin-right: auto;
+            }
+
+            .foot {
+              color: #38470B;
+              display: flex;
+              justify-content: space-around;
+              padding-left: 10%;
+              padding-right: 10%;
+              padding-bottom: 20px;
+              text-align: center;
+              font-family: 'Inter', sans-serif;
+              margin-top: 100px;
+              flex-wrap: wrap;
+              }
+              .cont {
+              font-size: 18px;
+              font-weight: 100;
+              font-family: 'Inter', sans-serif;
+              }
+              .text {
+              font-size: 14px;
+              font-weight: bold;
+              font-family: 'Inter', sans-serif;
+              }
+              
+.header-menu-btn {
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  
+              @media (max-width: 576px) {
+                .header-nav {
+                  position: fixed;
+                  display: flex;
+                  flex-direction: column;
+                  top: 0;
+                  left: -280px;
+                  width: 240px;
+                  height: 100%;
+                  background-color: rgb(160, 133, 91, 0.8);
+                  border: 1px solid #38470B;
+                  border-top-right-radius: 16px;
+                  border-bottom-right-radius: 16px;
+                  transition: transform 0.3 linear;
+                  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.25);
+                  justify-content: flex-start;
+                }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+                .header-nav.active {
+                  transform: translateX(100%);
+                }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+                .link {
+                margin-left: 50px;
+                margin-top: 30px;
+                color: #F9F6F2;
+                }
 
-.App-link {
-  color: #61dafb;
+                .header-menu-btn {
+                  display: block;
+                  margin-left: auto;
+                  width: 40px;
+                  height: 40px;
+                  border: none;
+                  background-color: transparent;
+                  color: #38470B;
+                }
+.icon-nav {
+  width: 40px;
 }
+                  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
