--- a/src/MenuComponent/menu.css
+++ b/src/MenuComponent/menu.css
@@ -8,8 +8,12 @@
   .product-card {
     margin: 30px;
     background-color: #A0855B;
+    cursor: pointer;
   }
-
+.product-img {
+  width: 400px;
+  height: 500px;
+}
   h3 {
    font-family: 'Inter', sans-serif;
    color: #f4eddd;
@@ -27,6 +31,7 @@
   .cont {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
   }
   
   .change {
@@ -36,6 +41,7 @@
     font-size: 14px;
     border: none;
     font-family: 'Inter', sans-serif;
+    cursor: pointer;
   }
   
   button {
@@ -49,4 +55,61 @@
 
 sup {
     color: #FF9843;
+}
+
+.custom-button {
+  color: #f4eddd;
+  margin: 20px;
+  padding: 10px;
+  width: 200px;
+  border: none;
+  font-size: 24px;
+  font-weight: 100;
+  font-style: italic;
+  font-family: 'Inter', sans-serif;
+  text-decoration: none;
+}
+
+.custom-title {
+  font-size: 20px;
+  font-family: 'Inter', sans-serif;
+  color: #38470B;
+  font-style: normal;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  }
+  
+  .overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1a1a1a94;
+  width: 100%;
+  height: 100%;
+  }
+  
+  .modal_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #F9F6F2;
+  font-size: 20px;
+  width: 100%;
+  height: 50%;
+  }
+
+@media (max-width: 576px) {
+
+  .product-img {
+    width: 300px;
+    height: 400px;
+  }
+  
 }
