--- a/src/TeamComponent/team.css
+++ b/src/TeamComponent/team.css
@@ -82,6 +82,7 @@ margin-right: 10%;
     height: 30px; 
     margin-left: 5px;
     margin-right: 5px;
+    cursor: pointer;
   }
 
   .icons {
@@ -103,8 +104,28 @@ margin-right: 10%;
     width: 60%;
     font-family: 'Inter', sans-serif;
     }
-    hr {
+
+   .line {
       width: 30%;
       color: #fff;
       margin-top: 40px;
+      }
+
+      @media (max-width: 576px) {
+
+        .slide .image {
+          width: 220px;
+          height: 300px;
+          margin: 0 auto;
+         
+        }
+        
+        .worker {
+          width: 220px; 
+        }
+        
+        .textAbout {
+          width: 90%;
+        }
+        
       }
