--- a/src/MenuComponent/menu.css
+++ b/src/MenuComponent/menu.css
@@ -1,27 +1,92 @@
 
 .products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  
-  .product-card {
-    margin: 30px;
-    background-color: #A0855B;
-    cursor: pointer;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.product-card {
+  margin: 30px;
+  background-color: #A0855B;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+}
+
 .product-img {
   width: 400px;
   height: 500px;
 }
+
+.overlay-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.product-card:hover .overlay-btn {
+  opacity: 1;
+}
+
+.overlay-btn .btn {
+  transform: translateY(-100%); /* Начальное смещение вверх (скрыто) */
+  transition: transform 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.product-card:hover .overlay-btn .btn  {
+  transform: translateY(0); /* Конечное смещение вниз (показано) */
+  opacity: 1;
+}
+
+.btn {
+  padding: 20px;
+  background-color: #FF9843;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  color: #ffffff; 
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  background-color: #38470B;
+}
+
+.view-btn {
+  padding: 20px;
+  background-color: transparent;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  color: #ffffff; 
+  border: none;
+  cursor: pointer;
+}
+
+.view-btn:hover {
+color: #FF9843;
+}
   h3 {
    font-family: 'Inter', sans-serif;
    color: #f4eddd;
+   text-align: center;
+   text-transform: uppercase;
   }
 
   h4 {
     font-family: 'Inter', sans-serif;
     color: #38470B;
+    text-align: center;
   }
 
   .product-info {
@@ -42,15 +107,41 @@
     border: none;
     font-family: 'Inter', sans-serif;
     cursor: pointer;
-  }
-  
-  button {
-    margin: 10px;
+    width: 100px;
   }
 
-  h2 {
-    color: #38470B;
+  .cart-cont {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+  }
+
+  .cart-btn {
+    background-color: transparent;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .quantity{
+    width: 20px;
+    height: 20px;
+    background-color: #FF9843; 
     font-family: 'Inter', sans-serif;
+    color: #38470B;
+    font-weight: 600;
+    margin: 0;
+    margin-right: 6px;
+  }
+
+  button {
+    margin: 10px;
+    border-radius: 5px;
+  }
+
+  button:hover {
+    transform: scale(1.1);
   }
 
 sup {
@@ -83,6 +174,7 @@ sup {
   bottom: 0;
   right: 0;
   left: 0;
+  z-index: 1000;
   }
   
   .overlay {
