--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,7 @@ h2 {
   cursor: pointer;
   transition: right 0.6s ease-in-out; 
   border: 1px red solid;
+  z-index: 9;
 }
 
 .cart-button {
@@ -92,11 +93,13 @@ h2 {
   cursor: pointer;
   transition: right 0.6s ease-in-out; 
   border: 1px red solid;
+  z-index: 9;
 }
 
 .scroll-to-top.visible,
 .cart-button.visible {
   right: 20px; /* Появление справа */
+ 
 }
 
 .scroll-to-top.hidden,
