--- a/src/App.css
+++ b/src/App.css
@@ -1,171 +1,149 @@
-    body {
-    background-color: #F9F6F2;
-    margin: 0;
-    }
-
-    .name {
-    color: rgba(145, 91, 74, 1);
-    font-size: 30px;
-    text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
-    font-family: 'Inter', sans-serif;
-    }
-
-    .talks {
-        color: #38470B;
-        }
-    
-        .header-nav {
-            display: flex;
-            justify-content: flex-end;
-            padding: 15px;
-          }
-          
-          .link {
-    margin-top: 15px;
-    text-decoration: none;
-    color: #38470B;
-    font-size: 24px;
-    text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
-    padding: 10px;
-    font-family: 'Inter', sans-serif;
-          }
-
-          .logo {
-            display: flex;
-            margin-right: auto;
-            }
-  
-h2 {
+body {
+  background-color: #F9F6F2;
+  margin: 0;
+  }
+  .name {
+  color: rgba(145, 91, 74, 1);
+  font-size: 30px;
+  text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+  font-family: 'Inter', sans-serif;
+  }
+  .talks {
+  color: #38470B;
+  }
+  .header-nav {
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px;
+  }
+  .link {
+  margin-top: 15px;
+  text-decoration: none;
+  color: #38470B;
+  font-size: 24px;
+  text-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+  font-family: 'Inter', sans-serif;
+  }
+  .logo {
+  display: flex;
+  margin-right: auto;
+  }
+  h2 {
   font-family: 'Inter', sans-serif;
   color: #38470B;
-}
-
-.footer {
+  }
+  .footer {
   width: 80%; 
   margin-top: 100px;
   background-color: #38470B;
   height: 3px;
   border: none;
-}
-            .foot {
-              color: #38470B;
-              display: flex;
-              justify-content: space-around;
-              padding-left: 10%;
-              padding-right: 10%;
-              padding-bottom: 20px;
-              text-align: center;
-              font-family: 'Inter', sans-serif;
-              flex-wrap: wrap;
-              }
-              .cont {
-              font-size: 18px;
-              font-weight: 100;
-              font-family: 'Inter', sans-serif;
-              }
-              .text {
-              font-size: 14px;
-              font-weight: bold;
-              font-family: 'Inter', sans-serif;
-              cursor: pointer;
-              }
-              
-.header-menu-btn {
+  }
+  .foot {
+  color: #38470B;
+  display: flex;
+  justify-content: space-around;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 20px;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  flex-wrap: wrap;
+  }
+  .cont {
+  font-size: 18px;
+  font-weight: 100;
+  font-family: 'Inter', sans-serif;
+  }
+  .text {
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Inter', sans-serif;
+  cursor: pointer;
+  }
+  .header-menu-btn {
   display: none;
-}
-
-.scroll-to-top {
+  }
+  .scroll-to-top {
   position: fixed;
   bottom: 20px;
   right: -60px;
-  font-size: 24px;
   cursor: pointer;
   transition: right 0.6s ease-in-out; 
-  border: 1px red solid;
   z-index: 9;
-}
-
-.cart-button {
+  }
+  .cart-button {
   position: fixed;
   bottom: 65px;
   right: -60px;
-  font-size: 24px;
   cursor: pointer;
   transition: right 0.6s ease-in-out; 
-  border: 1px red solid;
   z-index: 9;
-}
+  border: none;
+  background: linear-gradient(#efdc5e,#FF9843);
+  }
+  .scroll-to-top.visible {
+    right: 20px; 
+  }
+  .cart-button.visible {
+  right: 10px; 
+  }
+  .scroll-to-top.hidden,
+  .cart-button.hidden {
+  right: -60px; 
+  }
 
-.scroll-to-top.visible,
-.cart-button.visible {
-  right: 20px; /* Появление справа */
- 
-}
+  @media all and (max-width: 576px) {
+  .header-nav {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: -290px;
+  width: 250px;
+  height: 100%;
+  background-color: #F9F6F2;;
+  border: 1px solid #38470B;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
+  transition: transform 0.7s ease;
+  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.25);
+  justify-content: flex-start;
+  z-index: 100;
+  }
+  .header-nav.active {
+  transform: translateX(100%);
+  }
+  .overlay-body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 99;
+  opacity: 0;
+  transition: opacity 0.7s ease;
+  }
+  .overlay-body.visible {
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  }
+  .link {
+  margin-left: 50px;
+  margin-top: 30px;
+  color: #38470B;
+  }
+  .header-menu-btn {
+  display: block;
+  margin-left: auto;
+  width: 40px;
+  height: 40px;
+  font-size: 40px;
+  border: none;
+  background-color: transparent;
+  color: #38470B;
+  }
 
-.scroll-to-top.hidden,
-.cart-button.hidden {
-  right: -60px; /* Скрытие за пределы экрана */
-}
-
-  
-              @media (max-width: 576px) {
-                .header-nav {
-                  position: fixed;
-                  display: flex;
-                  flex-direction: column;
-                  top: 0;
-                  left: -290px;
-                  width: 250px;
-                  height: 100%;
-                  background-color: #F9F6F2;;
-                  border: 1px solid #38470B;
-                  border-top-right-radius: 16px;
-                  border-bottom-right-radius: 16px;
-                  transition: transform 0.7s ease;
-                  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.25);
-                  justify-content: flex-start;
-                  z-index: 100;
-                }
-
-                .header-nav.active {
-                  transform: translateX(100%);
-                }
-
-                .overlay-body {
-                  position: fixed;
-                  top: 0;
-                  left: 0;
-                  width: 100%;
-                  height: 100%;
-                  background-color: rgba(0, 0, 0, 0);
-                  z-index: 99;
-                  opacity: 0;
-                  transition: opacity 0.7s ease;
-                }
-                
-                .overlay-body.visible {
-                  background-color: rgba(0, 0, 0, 0.5);
-                  opacity: 1;
-                }
-
-                .link {
-                margin-left: 50px;
-                margin-top: 30px;
-                color: #38470B;
-                }
-
-                .header-menu-btn {
-                  display: block;
-                  margin-left: auto;
-                  width: 40px;
-                  height: 40px;
-                  font-size: 40px;
-                  border: none;
-                  background-color: transparent;
-                  color: #38470B;
-                }
-
-                  }
-
-                  
-
+  }
