--- a/src/MenuComponent/menu.css
+++ b/src/MenuComponent/menu.css
@@ -38,13 +38,13 @@
 }
 
 .overlay-btn .btn {
-  transform: translateY(-100%); /* Начальное смещение вверх (скрыто) */
+  transform: translateY(-100%); 
   transition: transform 0.3s ease-in-out;
   opacity: 0;
 }
 
 .product-card:hover .overlay-btn .btn  {
-  transform: translateY(0); /* Конечное смещение вниз (показано) */
+  transform: translateY(0); 
   opacity: 1;
 }
 
