--- a/src/HomeComponent/home.css
+++ b/src/HomeComponent/home.css
@@ -137,7 +137,7 @@
       display: none;
     }
 
-    @media (max-width: 576px) {
+    @media all and (max-width: 576px) {
       .video-carousel {
      display: none;
       }
