--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,20 @@ body {
   background-color: #F9F6F2;
   margin: 0;
   }
+
+  h1, .home-header {
+    color: #F9F6F2;
+    font-family: 'Inter', sans-serif;
+  }
+.home-header {
+  font-style: italic;
+}
+  .header {
+    color: #38470B;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    padding: 10px;
+    }
   .name {
   color: rgba(145, 91, 74, 1);
   font-size: 30px;
@@ -29,10 +43,7 @@ body {
   display: flex;
   margin-right: auto;
   }
-  h2 {
-  font-family: 'Inter', sans-serif;
-  color: #38470B;
-  }
+
   .footer {
   width: 80%; 
   margin-top: 100px;
@@ -81,7 +92,7 @@ body {
   transition: right 0.6s ease-in-out; 
   z-index: 9;
   border: none;
-  background: linear-gradient(#efdc5e,#FF9843);
+  background: linear-gradient(#efdc5e,#FF9843); 
   }
   .scroll-to-top.visible {
     right: 20px; 
@@ -94,7 +105,7 @@ body {
   right: -60px; 
   }
 
-  @media all and (max-width: 576px) {
+  @media all and (max-width: 768px) {
   .header-nav {
   position: fixed;
   display: flex;
