--- a/src/HomeComponent/home.css
+++ b/src/HomeComponent/home.css
@@ -1,32 +1,61 @@
-.video-carousel {
-    width: 50%;
-    position: absolute;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-    z-index: -1;
-  }
-  
-  .video-carousel.hidden {
-    opacity: 0;
-  }
+h1 {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
 
-  h2 {
-    text-align: center;
-    font-style: italic;
-    font-family: 'Inter', sans-serif;
+.home-header {
+  position: absolute;
+  top: 57%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.video-carousel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  opacity: 1;
+  z-index: -1;
   }
+.video-carousel.hidden {
+  opacity: 0;
+}
+
+.btns {
+  position: absolute;
+  top: 65%;
+  width: 100%;
+  height: 100%; 
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-50%);
+}
+.slide-btn {
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  padding: 10px;
+  font-size: 50px;
+  opacity: 0.7;
+  cursor: pointer;
+  height: 100%;
+}
+.slide-btn:hover {
+  color: #f0f8ff;   
+  opacity:1;
+  font-size: 65px;
+}
 
   .aboutCoffee {
     display: flex;
     margin-bottom: 50px;
     flex-wrap: wrap;
-   
     }
-
-  .video-box {
-    flex: 1;
-  
-  }
 
     .info-container {
     background-color: #A0855B;
@@ -73,33 +102,7 @@
 
             .interior {
                 width: 50%;
-
             }
-
-    .slide-btn {
-        color: #A0855B;
-        background-color: transparent;
-        font-size: 50px;
-        opacity: 0.5;
-        font-weight: 100;
-        border: none;
-    }
-
-    .slide-btn:hover {
-        color: #f0f8ff;
-        height: 100%;
-        background-color: transparent;
-        opacity:1;
-        font-size: 65px;
-        cursor: pointer;
-    }
-    
-.btns {
-    display: flex;
-    justify-content: space-between;
-    height: 100%;
-   
-}
 
 .container {
     display: flex;
@@ -133,19 +136,43 @@
     font-family: 'Inter', sans-serif;
     }
 
-    .video-mobile {
-      display: none;
+    @media all and (max-width: 1024px) {
+
+      .video-carousel {
+        height: 40%;
+        }
+      .btns {
+        top: 30%;
+        height: 40%; 
+      }
+       h1 {
+      font-size: 14px;
+      top: 30%;
+      }
+      .home-header {
+        font-size: 18px;
+        top: 32%;
+      }
+    }
+    @media all and (max-width: 768px) {
+      .btns {
+        top: 25%;
+      }
     }
 
     @media all and (max-width: 576px) {
-      .video-carousel {
-     display: none;
+      .btns {
+        top: 25%;
+        height: 30%;
       }
-      .video-mobile {
-        display: block;
-        width: 100%;
+      h1 {
+      font-size: 8px;
+      top: 20%;
       }
-  
+      .home-header {
+        font-size: 14px;
+        top: 27%;
+      }
      .aboutCoffee {
     flex-direction: column;
     }
@@ -172,7 +199,5 @@
     .box {
       margin-top: 30px;
     }
-.btns {
-  display: none;
-}
+
     }
