--- a/src/MenuComponent/menu.css
+++ b/src/MenuComponent/menu.css
@@ -285,6 +285,11 @@ cursor: pointer;
   margin-left: 25%;
  }
  
+ .cart-empty {
+  color: #38470B;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+ }
 
 .delete-button {
   margin-left: 20px;
@@ -305,6 +310,10 @@ cursor: pointer;
   cursor: pointer;
   border-radius: 5px;
   width: 150px;
+}
+
+.buy-btn:hover {
+  background-color: #38470B;
 }
 .closeCartButton {
   position: absolute;
