css for Contacts, About, Team, Gallery is finished

--- a/src/ContactsComponent/contact.css
+++ b/src/ContactsComponent/contact.css
@@ -74,3 +74,14 @@ form {
     font-size: 20px;
     }
     }
+
+
+    @media all and (max-width: 576px) {
+        #email, #message {
+            width: 200px;
+        }
+
+        label {
+            font-size: 14px;
+        }
+    }
