--- a/src/AboutComponent/about.css
+++ b/src/AboutComponent/about.css
@@ -1,4 +1,3 @@
-
 .container {
     display: flex;
     justify-content: space-around;
@@ -47,7 +46,6 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
-    z-index: -100;
     }
     .textBoxTwo {
     color: #ffffff;
@@ -82,6 +80,29 @@
     .interior {
     width: 50%;
     }
+
+    @media all and (max-width: 1024px) {
+        .textBoxTwo {
+            font-size: 28px;
+            width: 70%;
+            }
+            .fresh {
+            font-size: 18px;
+            width: 80%;
+            }
+    }
+
+    @media all and (max-width: 912px) {
+        .textBoxTwo {
+            font-size: 24px;
+            width: 90%;
+            margin-top: 5px;
+            }
+        .fresh {
+            margin-bottom: 10px;
+        }
+    }
+
     @media all and (max-width: 576px) {
     .aboutCoffee {
     flex-direction: column;
@@ -101,3 +122,10 @@
     width: 100%;
     }
     }
+
+    @media all and (max-width: 280px) {
+      .everyMonth  {
+        text-align: center;
+      }
+    }
+    
