--- a/src/HomeComponent/home.css
+++ b/src/HomeComponent/home.css
@@ -19,6 +19,7 @@ h1 {
   object-fit: cover; 
   opacity: 1;
   z-index: -1;
+  transition: opacity 1s ease-in-out;
   }
   .video-carousel.hidden {
   opacity: 0;
@@ -47,6 +48,9 @@ h1 {
   opacity:1;
   font-size: 65px;
   }
+
+
+
   @media all and (max-width: 1024px) {
   .video-carousel {
   height: 40%;
@@ -57,18 +61,43 @@ h1 {
   }
   h1 {
   font-size: 14px;
-  top: 30%;
+  top: 25%;
   }
   .home-header {
   font-size: 18px;
-  top: 32%;
+  top: 30%;
   }
   }
+
+  @media screen and (min-width: 600px) and (max-width: 1024px) and (orientation: landscape) {
+  
+   .video-carousel {
+      height: 100%;
+    }
+    h1 {
+      top: 50%;
+      }
+      .home-header {
+      top: 52%;
+      }
+      .btns {
+        top: 50%;
+        height: 50%; 
+        }
+  }
+
   @media all and (max-width: 768px) {
+    h1 {
+      top: 25%;
+      }
+      .home-header {
+      top: 30%;
+      }
   .btns {
-  top: 25%;
+  top: 20%;
   }
   }
+
   @media all and (max-width: 576px) {
   .btns {
   top: 25%;
@@ -86,3 +115,13 @@ h1 {
   margin-top: 30px;
   }
   }
+
+  @media all and (max-width: 400px) {
+    h1 {
+      top: 30%;
+      }
+      .home-header {
+        display: none;
+        }
+  }
+
