--- a/src/MenuComponent/menu.css
+++ b/src/MenuComponent/menu.css
@@ -140,8 +140,9 @@ color: #FF9843;
     border-radius: 5px;
   }
 
-  button:hover {
+  .change:hover {
     transform: scale(1.1);
+    background-color: #FF9843; 
   }
   
 .custom-button {
@@ -164,183 +165,20 @@ color: #FF9843;
   font-style: normal;
 }
 
-.modal {
-   position: fixed;
-   top: 0;
-   bottom: 0;
-  right: 0;
-  left: 0;
-  z-index: 1000;
-  }
-  
-  .overlay {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #1a1a1a94;
-  width: 100%;
-  height: 100%;
-  }
-  
-  .modal_content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-image: url('MenuContent/coffee_beans.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #F9F6F2;
-  font-size: 20px;
-  width: 80%;
-  height: 50%;
-  }
 
-  /*оформление корзины */
-.cart {
-  position: relative;
-  border: #38470B 1px solid;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-  background-color: #f4eddd;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-top: 30px;
-  border-radius: 5px;
-}
-
-.cart-item {
-  display: flex;
-}
-.title-li {
-  font-weight: 600;
-  color: #F9F6F2;
-  background-color: #A0855B;
-  text-transform: uppercase;
-}
-.product-title {
-  display: flex;
-}
-.product-name {
-  width: 250px;
-}
-.product-price {
-  margin-left: 30px;
-}
-.item-name {
-  display: flex;
-  align-items: center;
-  margin-left: 10px;
-  width: 200px;
-  font-weight: bold;
-  color: #38470B;
-}
-
-.item-price {
-  display: flex;
-  align-items: center;
-  margin-left: 30px;
-  font-weight: bold;
-  color: #FF9843;
-}
-li {
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
-  list-style-type: none;
-  background-color: #F9F6F2;
-  font-family: 'Inter', sans-serif;
-}
-
-.quantity-controls {
-  color: #38470B
-}
-.change-quantity {
-color: #38470B;
-font-family: 'Inter', sans-serif;
-font-size: 16px;
-border: #38470B 1px solid;
-width: 24px;
-cursor: pointer;
-}
-.total {
-  color: #38470B;
-  font-size: 16px;
-  font-weight: 600;
-  font-family: 'Inter', sans-serif;
-  margin-left: 40%;
-}
-
-.totalItems {
- color: #FF9843; 
- font-weight: bolder;
- margin-left: 13%;
-}
-
-.totalPrice {
-  color: #FF9843; 
-  font-weight: bolder;
-  margin-left: 25%;
- }
- 
- .cart-empty {
-  color: #38470B;
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
- }
-
-.delete-button {
-  margin-left: 20px;
-}
-.deleteItem {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  right: 5px;
-}
-.buy-btn {
-  background-color: #FF9843;
-  color: #f4eddd;
-  border: none;
-  font-family: 'Inter', sans-serif;
-  padding: 20px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 150px;
-}
-
-.buy-btn:hover {
-  background-color: #38470B;
-}
-.closeCartButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.closeCartButton:hover::before {
-  content: "Cancel the order";
-  position: absolute;
-  background-color: #61635d;
-  color: #ffffff;
-  padding: 4px 8px;
-  border-radius: 4px;
-  top: -30px;
-  right: 0;
-  white-space: nowrap;
-}
-
-@media (max-width: 576px) {
+@media all and (max-width: 1024px) {
 
   .product-img {
     width: 300px;
     height: 400px;
   }
   
+}
+
+
+@media all and (max-width: 280px) {
+  .product-img {
+    width: 200px;
+    height: 280px;
+  }
 }
